WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
295311
REGRESSION (
295636@main
): Crashes in Books underneath `DictionaryLookup::showPopup`
https://bugs.webkit.org/show_bug.cgi?id=295311
Summary
REGRESSION (295636@main): Crashes in Books underneath `DictionaryLookup::show...
Aditya Keerthi
Reported
2025-07-01 18:09:45 PDT
rdar://154398584
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2025-07-01 18:13:44 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/47467
EWS
Comment 2
2025-07-01 20:44:04 PDT
Committed
296900@main
(0c3ba775e4f6): <
https://commits.webkit.org/296900@main
> Reviewed commits have been landed. Closing PR #47467 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug