REGRESSION (295636@main): Crashes in Books underneath `DictionaryLookup::showPopup` https://bugs.webkit.org/show_bug.cgi?id=295311 rdar://154398584

Reviewed by Abrar Rahman Protyasha.

295636@main introduced dereferencing of text indicators before checking if they
are null.

295707@main fixed this issue on macOS, but did not apply the same fix to Mac
Catalyst.

* Source/WebCore/editing/cocoa/DictionaryLookup.mm:
(WebCore::showPopupOrCreateAnimationController):

Add a null check.

Canonical link: https://commits.webkit.org/296900@main